Resolved scaling and click issue

--- a/client/src/Net/Net.css
+++ b/client/src/Net/Net.css
@@ -6,9 +6,7 @@
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    position: fixed;
-    top: 0;
-    left: 0;
+    position: relative;
 }
 
 .net-container:hover {
