--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Net Project</title>
+    {%  block stylesheets %}
+    {% endblock stylesheets %}
+
 </head>
 <body>
 {%  block content %}
