--- a/client/src/Net/Net.css
+++ b/client/src/Net/Net.css
@@ -3,7 +3,10 @@
 }
 
 .net-container {
+    top: 0;
+    left: 0;
     width: 100vw;
+    max-width:100%;
     height: 100vh;
     overflow: hidden;
     position: relative;
