--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,19 @@
-body {
+body, html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: 'karla',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'karla';
+  src: url('./fonts/Karla-Bold.ttf');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'karla';
+  src: url('./fonts/Karla-Regular.ttf');
+  font-weight: normal;
 }
