refactored code and readded loading screen

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,46 +1,17 @@
-.App {
-  text-align: center;
+.slide-transition-enter {
+  opacity: 0;
 }
 
-.slide-1 {
-  background-color: #011638;
-  width: 100vw;
-  height: 100vh;
-  max-width:100%;
-  z-index: 3;
-  position: fixed;
-  transition: 1000ms ease-in-out;
-  color: white;
-  cursor: pointer;
-}
-
-.slide-1-title {
-  display: block;
-  max-width: 2000px;
-  height: 500px;
-  margin: 200px auto;
-  padding: 0 15px;
+.slide-transition-enter-active {
   opacity: 1;
-  -webkit-animation: fadeInAnimation 3s none;
-  -moz-animation: fadeInAnimation 3s none;
-  -o-animation: fadeInAnimation 3s none;
-  animation: fadeInAnimation 3s none;
-  font-weight: bold;
-  font-size: 47px;
 }
 
-@media screen and (max-width: 1007px) {
-  .slide-1-title {
-    margin: 150px auto;
-    font-size: 40px;
-  }
+.slide-transition-exit {
+  opacity: 1;
 }
 
-@media screen and (max-width: 640px) {
-  .slide-1-title {
-    margin: 100px auto;
-    font-size: 30px;
-  }
+.slide-transition-exit-active {
+  opacity: 0;
 }
 
 @keyframes fadeInAnimation {
@@ -95,247 +66,4 @@
   animation: flickerAnimation 4s infinite;
   animation-delay: 3s;
   opacity: 0;
-}
-
-.slide-1-enter {
-
-  opacity: 0;
-}
-
-.slide-1-enter-active {
-  opacity: 1;
-  background-color: #011638;
-}
-
-.slide-1-exit {
-  opacity: 1;
-}
-
-.slide-1-exit-active {
-  opacity: 0;
-
-}
-
-.slide-2 {
-  background-color: #F4EEE6;
-  width: 100vw;
-  height: 100vh;
-  max-width:100%;
-  z-index: 2;
-  position: fixed;
-  transition: 2000ms ease-in-out;
-  color: #011638;
-  cursor: pointer;
-}
-
-.slide-2-title {
-  display: block;
-  max-width: 2000px;
-  margin: 200px auto 0;
-  padding: 0 15px;
-  opacity: 1;
-  font-weight: bold;
-  font-size: 47px;
-  -webkit-animation: fadeInAnimation 3s none;
-  -moz-animation: fadeInAnimation 3s none;
-  -o-animation: fadeInAnimation 3s none;
-  animation: fadeInAnimation 3s none;
-}
-
-.slide-2-subtitle {
-  display: block;
-  max-width: 2000px;
-  margin: 50px auto 50px;
-  padding: 0 15px;
-  font-size: 40px;
-  opacity: 1;
-  -webkit-animation: fadeInAnimation 3.5s none;
-  -moz-animation: fadeInAnimation 3.5s none;
-  -o-animation: fadeInAnimation 3.5s none;
-  animation: fadeInAnimation 3.5s none;
-}
-
-
-@media screen and (max-width: 1007px) {
-  .slide-2-title {
-    margin: 50px auto 0px;
-    font-size: 40px;
-  }
-  .slide-2-subtitle {
-    margin: 15px auto;
-    font-size: 30px;
-  }
-}
-
-@media screen and (max-width: 640px) {
-  .slide-2-title {
-    margin: 50px auto 0px;
-    font-size: 30px;
-  }
-  .slide-2-subtitle {
-    margin: 15px auto;
-    font-size: 20px;
-  }
-}
-
-.slide-2-enter {
-  opacity: 0;
-
-}
-
-.slide-2-enter-active {
-  opacity: 1;
-  background-color: #F4EEE6;
-}
-
-.slide-2-exit {
-  opacity: 1;
-}
-
-.slide-2-exit-active {
-  opacity: 0;
-
-}
-
-.slide-3 {
-  background-color: #F4EEE6;
-  width: 100vw;
-  height: 100vh;
-  max-width:100%;
-  z-index: 1;
-  position: fixed;
-  transition: 2000ms ease-in-out;
-  color: #011638;
-  cursor: pointer;
-}
-
-.slide-3-enter {
-  opacity: 0;
-
-}
-
-.slide-3-enter-active {
-  opacity: 1;
-  background-color: #F4EEE6;
-}
-
-.slide-3-exit {
-  opacity: 1;
-}
-
-.slide-3-exit-active {
-  opacity: 0;
-
-}
-
-.slide-4 {
-  background-color: #F4EEE6;
-  width: 100vw;
-  height: 100vh;
-  max-width:100%;
-  z-index: 1;
-  position: fixed;
-  transition: 2000ms ease-in-out;
-  color: #011638;
-  cursor: pointer;
-}
-
-.slide-4-enter {
-  opacity: 0;
-
-}
-
-.slide-4-enter-active {
-  opacity: 1;
-  background-color: #F4EEE6;
-}
-
-.slide-4-exit {
-  opacity: 1;
-}
-
-.slide-4-exit-active {
-  opacity: 0;
-
-}
-
-.slide-5 {
-  background-color: #F4EEE6;
-  width: 100vw;
-  height: 100vh;
-  max-width:100%;
-  z-index: 1;
-  position: fixed;
-  transition: 2000ms ease-in-out;
-  color: #011638;
-  cursor: pointer;
-}
-
-.slide-5-enter {
-  opacity: 0;
-
-}
-
-.slide-5-enter-active {
-  opacity: 1;
-  background-color: #F4EEE6;
-}
-
-.slide-5-exit {
-  opacity: 1;
-}
-
-.slide-5-exit-active {
-  opacity: 0;
-
-}
-
-.slide-6 {
-  background-color: #65B4D0;
-  width: 100vw;
-  height: 100vh;
-  max-width:100%;
-  z-index: 1;
-  position: fixed;
-  transition: 2000ms ease-in-out;
-  color: white;
-  cursor: pointer;
-}
-
-.slide-6-enter {
-  opacity: 0;
-
-}
-
-.slide-6-enter-active {
-  opacity: 1;
-  background-color: #65B4D0;
-}
-
-.slide-6-exit {
-  opacity: 1;
-}
-
-.slide-6-exit-active {
-  opacity: 0;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
