--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,7 @@ body, html {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
 }
 
 @font-face {
