--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@ body, html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
+  box-sizing: border-box;
 }
 
 @font-face {
