Layed out tutorial system

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,7 @@ body, html {
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   box-sizing: border-box;
+  background-color: #011638;
 }
 
 @font-face {
