--- a/client/src/Animation/Animations.css
+++ b/client/src/Animation/Animations.css
@@ -69,6 +69,7 @@
         opacity: 1;
     }
 }
+
 @keyframes tracking-in-expand {
     0% {
         letter-spacing: -0.5em;
@@ -82,3 +83,75 @@
     }
 }
   
+@-webkit-keyframes slide-left {
+    0% {
+        right: -250px;
+    }
+    100% {
+        right: 0;
+    }
+}
+
+@keyframes slide-left {
+    0% {
+        right: -250px;
+    }
+    100% {
+        right: 0;
+    }
+}
+
+@-webkit-keyframes slide-right {
+    0% {
+        right: 0;
+    }
+    100% {
+        right: -250px;
+    }
+}
+
+@keyframes slide-right {
+    0% {
+        right: 0;
+    }
+    100% {
+        right: -250px;
+    }
+}
+
+
+@-webkit-keyframes form-slide-down {
+    0% {
+        top: -100vh;
+    }
+    100% {
+        top: 0;
+    }
+}
+
+@keyframes form-slide-down {
+    0% {
+        top: -100vh;
+    }
+    100% {
+        top: 0;
+    }
+}
+
+@-webkit-keyframes form-slide-up {
+    0% {
+        top: 0;
+    }
+    100% {
+        top: -100vh;
+    }
+}
+
+@keyframes form-slide-up {
+    0% {
+        top: 0;
+    }
+    100% {
+        top: -100vh;
+    }
+}
